# nixops-packet

./: .envrc  .gitignore  README.md  default.nix  overrides.nix  pyproject.toml  release.nix  setup.cfg  setup.py  shell.nix
.github/workflows/: ci.yaml
examples/: deployment-reserved.nix  reserved-packet.nix  trivial-packet.nix
nix/: default.nix  packet-keypair.nix  packet.nix  sources.json
nixops_packet/: __init__.py  plugin.py
nixops_packet/backends/: device.py
nixops_packet/nix/: default.nix  lib.nix  packet-keypair.nix  packet.nix
nixops_packet/parser/: __init__.py  parse_defs.py
nixops_packet/resources/: __init__.py  keypair.py
nixopspacket/: plugin.py  utils.py
nixopspacket/backends/: device.py  instance.py
nixopspacket/nix/: packet-keypair.nix
nixopspacket/parser/: __init__.py  parse_defs.py
nixopspacket/resources/: __init__.py  keypair.py
