
[tool.poetry]
name = "nixopspacket"
version = "1.0"
description = "NixOps plugin for Packet.com"
authors = ["Graham Christensen <graham@grahamc.com>"]
license = "LGPL-3.0-only"
include = [ "nixopspacket/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
packet-python = "^1.42.0"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
pytest-runner = "^5.2"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
packet = "nixopspacket.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
