[tool.poetry]
name = "nixops_packet"
version = "1.0"
description = "NixOps plugin for Packet.com"
authors = [ "DevOps <devops@iohk.io>", "Graham Christensen <graham@grahamc.com>" ]
license = "LGPL-3.0-only"
include = [ "nixops_packet/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
pytest-runner = "^5.2"
packet-python = {git = "https://github.com/packethost/packet-python.git", rev = "master"}

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
packet = "nixops_packet.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
